--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -126,3 +126,18 @@
     background-color: #181818;
     transition: all 0.4s ease;
 }
+
+@media (max-width: 1030px) {
+    .subscribe-content img {
+        display: none;
+    }
+    .subscribe-content {
+        justify-content: center;
+        align-items: center;
+    }
+    .subscribe-text {
+        width: 100%;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+}
