--- a/css/why-us.css
+++ b/css/why-us.css
@@ -106,4 +106,17 @@
     .why-us-text {
         width: 95%;
     }
+    .why-us {
+        padding: 50px 20px;
+    }
+    .why-us-content {
+        width: 100%;
+    }
+    .why-us-text {
+        width: 100%;
+        margin-left: 0px;
+    }
+    .why-us-circle-photo {
+        display: none;
+    }
 }
