--- a/css/courses.css
+++ b/css/courses.css
@@ -228,4 +228,11 @@
     .courses h4 {
         display: none;
     }
+    .courses {
+        padding: 50px 20px;
+    }
+    .course-cards {
+        flex-direction: column;
+        align-items: center;
+    }
 }
